--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -3,7 +3,7 @@ name: Publish Release
 on:
   push:
     tags:
-      - 'v*'  # This will trigger the workflow when a tag matching 'v*' pattern is pushed
+      - 'v*-binary'  # This will trigger the workflow when a tag matching 'v*' pattern is pushed
 
 jobs:
   publish_release:
