--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -7,11 +7,13 @@ on:
 
 jobs:
   publish_release:
-    runs-on: macos-latest  # Use macOS runner for macOS/Xcode environment
-
+    runs-on: macos-14  # Use macOS runner for macOS/Xcode environment
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: 15.0
       - name: Build Binaries
         run: iOS/archive_xcframework.sh
       - name: Create Release
